# Diary

./: Cargo.toml  LICENSE  README.md  README_zh.md
cli/: Cargo.toml
cli/src/: args.rs  command.rs  error.rs  execute.rs  executor.rs  lib.rs  main.rs  terminal.rs
core/: Cargo.toml
core/src/: base.rs  lib.rs  model.rs  storage.rs
core/src/base/: command.rs  date.rs  env.rs  error.rs  executor.rs  parser.rs
core/src/db/: command.rs  executor.rs  mod.rs
core/src/model/: day.rs  event.rs  mod.rs
core/src/storage/: db_mgr.rs
core/src/storage/io/: export.rs  import.rs  mod.rs  mode.rs  record.rs
core/src/utils/: mod.rs  search.rs
core/src/utils/io/: export.rs  import.rs  mod.rs
gui/: Cargo.toml
gui/src/: lib.rs  main.rs
gui/src/app/: app.rs  component.rs  mod.rs
gui/src/app/component/: face.rs
gui/src/model/: date.rs  day.rs  mod.rs
gui/src/service/: executor.rs
src/: cli.rs  main.rs  model.rs
src/cli/: args.rs  handler.rs  run.rs
src/interface/: cli.rs
src/interface/cli/: args.rs  executor.rs  terminal.rs
src/model/: day.rs  event.rs
src/storage/: db_mgr.rs
