[package]
name = "diary-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53" , features = ["derive", ]}
rusqlite = { version = "0.38.0", features = ["bundled"] }
rustyline = "17.0.2"
tempfile = "3.24.0"
time = { version = "0.3.44", features = ["formatting", "parsing", "macros"] }
directories = "6.0.0"

diary-core = { path = "../core" }
