[package]
name = "diary-core"
version = "0.9.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }
time = { version = "0.3.44", features = ["formatting", "parsing", "macros", "local-offset"] }
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
