[package]
name = "diary-core"
version = "1.2.1"
edition = "2024"

[dependencies]
time = { version = "0.3.44", features = ["formatting", "parsing", "macros", "local-offset"] }
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
serde_json = "1.0.149"
directories = "6.0.0"
regex = "1.12.3"
sqlx = { version = "0.8.6", features = ["sqlite"] }
tokio = { version = "1.50.0", features = ["rt", ] }
