[package]
name = "diary-gui"
version = "1.0.3"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", default-features = false }
eframe = "0.33.3"
egui_extras = { version = "0.33.3", features = ["datepicker", "svg", "image"] }
diary-core = { path = "../core" }
rfd = "0.16.0"
async-std = "1.13.2"
